fixed squashed footer text

--- a/new_styles.css
+++ b/new_styles.css
@@ -65,7 +65,7 @@ body {
 .navbar {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
   color: var(--white);
 }
 
@@ -91,9 +91,9 @@ body {
 }
 
 .toggle_btn {
-  position: absolute;
+  position: fixed;
   top: 0.75rem;
-  right: 1rem;
+  right: 5px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -155,7 +155,7 @@ body {
 #skills ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 2rem;
   text-align: center;
   justify-self: start;
@@ -232,6 +232,7 @@ body {
 #footer .socials .contactMe {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 #footer .socials .contactMe p {
@@ -247,7 +248,7 @@ body {
   align-self: center;
 }
 /*media queries*/
-@media (max-width: 600px) {
+@media (max-width: 680px) {
   .cover h1 #my_name {
     margin: 0;
   }
@@ -263,6 +264,9 @@ body {
   /* navbar media queries*/
   .toggle_btn {
     display: flex;
+    position: fixed;
+    top: 0.75rem;
+    right: 5px;
   }
 
   .navbar_links {
